# oop2023

./: CMakeLists.txt  Prog1.cpp  Prog1.h  Prog1main.cpp  README.md
